[gd_scene load_steps=2 format=3 uid="uid://b5j0lp3dkspay"]

[ext_resource type="Script" path="res://scripts/level_generator.gd" id="1_cu0g8"]

[node name="LevelGenerator" type="Node2D"]
script = ExtResource("1_cu0g8")

[node name="RockParent" type="Node2D" parent="."]

[node name="RewardParent" type="Node2D" parent="."]

[node name="CloudParent" type="Node2D" parent="."]
